src/objects/ScheduleConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FriendlyDates__c</fullName>
        <label>Run Dates</label>
        <picklist>
            <controllingField>Frequency__c</controllingField>
            <picklistValues>
                <fullName>Working days only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weekends and holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FriendlyTimes__c</fullName>
        <label>Run Times</label>
        <picklist>
            <picklistValues>
                <fullName>00:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23:00</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Schedule Configuration</label>
    <nameField>
        <label>What does this step do?</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RequireFriendlyDates</fullName>
        <active>true</active>
        <errorConditionFormula>!INCLUDES(FriendlyDates__c, &apos;Working days only&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;Weekends and holidays&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;1&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;2&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;3&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;4&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;5&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;6&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;7&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;8&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;9&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;10&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;11&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;12&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;13&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;14&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;15&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;16&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;17&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;18&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;19&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;20&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;21&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;22&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;23&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;24&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;25&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;26&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;27&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;28&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;29&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;30&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;Sunday&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;Monday&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;Tuesday&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;Wednesday&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;Thursday&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;Friday&apos;) &amp;&amp;
!INCLUDES(FriendlyDates__c, &apos;Saturday&apos;)</errorConditionFormula>
        <errorDisplayField>FriendlyDates__c</errorDisplayField>
        <errorMessage>You must specify at least one run date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequireFriendlyTimes</fullName>
        <active>true</active>
        <errorConditionFormula>!INCLUDES(FriendlyTimes__c, &apos;00:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;01:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;02:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;03:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;04:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;05:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;06:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;07:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;08:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;09:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;10:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;11:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;12:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;13:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;14:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;15:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;16:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;17:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;18:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;19:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;20:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;21:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;22:00&apos;) &amp;&amp;
!INCLUDES(FriendlyTimes__c, &apos;23:00&apos;)</errorConditionFormula>
        <errorDisplayField>FriendlyTimes__c</errorDisplayField>
        <errorMessage>You must specify at least one run time.</errorMessage>
    </validationRules>
</CustomObject>